fix(search-modal): set `scrollbar-gutter: stable` unconditionally

--- a/components/search-modal/global.css
+++ b/components/search-modal/global.css
@@ -1,4 +1,7 @@
-:root.search-modal-open {
-  overflow: hidden;
+:root {
   scrollbar-gutter: stable;
+
+  &.search-modal-open {
+    overflow: hidden;
+  }
 }
